lightingweather/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightweather
  namespace: gohome
  labels:
    app: lightweather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lightweather
  template:
    metadata:
      labels:
        app: lightweather
    spec:
      containers:
        - name: lightweather
          image: 192.168.227.11:5000/lightweather:v4
          ports:
            - containerPort: 3040
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config.yml
              subPath: config.yml
          command: ["/app/lightweather"]
          args: ["-c", "/etc/config.yml"]
      volumes:
        - name: config-volume
          configMap:
            name: lightweather-config
