lightingweather/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lightweather-service
  namespace: gohome
  labels:
    app: lightweather
spec:
  selector:
    app: lightweather
  ports:
    - protocol: TCP
      port: 3040
      targetPort: http
      name: http
  type: LoadBalancer
