lightingweather/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-targets: /
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: "0"
  namespace: gohome
spec:
  ingressClassName: nginx
  rules:
    - host: hue.lightweather.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lightweather-service
                port:
                  number: 3040
